# VIO_Mono_VINS

./: CMakeLists.txt  README.md  package.xml
3rd_library/sophus/: se3.hpp  so3.hpp
config/: euroc.yaml
doc/: code_frame.md
include/ba_solver/graph_optimizor/: edge.hpp  kernel_function.hpp  problem.hpp  timer.hpp  utility.hpp  vertex.hpp
include/ba_solver/root_vio/: camera_observe.hpp  imu_block.hpp  kernel_function.hpp  landmark_block_base.hpp  landmark_block_invdep.hpp  landmark_block_pos.hpp  problem_base.hpp  problem_vio.hpp  problem_vio_full.hpp  problem_vo.hpp  problem_vo_full.hpp  timer.hpp  utility.hpp  vertex.hpp
include/camera_model/: camera_base.hpp  pinhole_camera.hpp
include/config_parameters/: config.hpp
include/estimator/: estimator.hpp
include/estimator/edges/: edge_camera_factor.hpp  edge_imu_factor.hpp  edge_reprojection_pos.hpp  (+1 more)
include/interface/: message_format.hpp
include/measurement/: feature_tracker.hpp  frame_manager.hpp  imu_preintegration.hpp  landmark_manager.hpp
launch/: test_on_euroc.launch
log/: 20220427_combined_message_test.txt  20220427_config_load_param_test.txt  20220427_landmark_manager_test.txt  20220428_estimator_init_step_1_2_test.txt  20220428_imu_integration_test.txt  20220430_estimator_init_fix_gravity.txt  20220501_fix_error_UsePosUpdataInvdep.txt  20220515_landmark_changes_when_marg_oldest.txt  20220515_landmark_changes_when_marg_subnew.txt  20220602_test_root_vio_optimize.txt  20220614_test_rootvio_solve_delta_xl.txt
saved_data/: cost_times.txt  full_gt.txt  gt.txt  poses.txt
src/camera_model/: camera_base.cpp  pinhole_camera.cpp
src/config_parameters/: config.cpp
src/estimator/: estimator.cpp  estimator_support.cpp  estimator_visualize.cpp
src/interface/: interface.cpp
src/measurement/: feature_tracker.cpp  frame_manager.cpp  imu_preintegration.cpp  landmark_manager.cpp
test/: run_vio_mono.cpp
(+13 files in other folders)
